...
            "state": "translated",
            "value": "憑證指紋"
          }
        }
      }
    },
    "Chat": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chat"
...
      }
    },
    "Enable %@ in Settings to use this feature.": {
      "comment": "A message displayed when a user tries to use a feature that is currently disabled. The placeholder text inside the message should be replaced with the name of the feature that is currently disabled.",
      "isCommentAutoGenerated": true
    },
    "Enable Notifications": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Enable Notifications"
...
            "state": "translated",
            "value": "正在建立連線…"
          }
        }
      }
    },
    "Export Archive": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Export Archive"
...
            "state": "translated",
            "value": "File %1$@ of %2$@"
          }
        }
      }
    },
    "File Transfer": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "File Transfer"
...
            "state": "translated",
            "value": "開始使用"
          }
        }
      }
    },
    "Go offline": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go offline"
...
            "state": "translated",
            "value": "離線"
          }
        }
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go online"
...
            "state": "translated",
            "value": "圖片預覽"
          }
        }
      }
    },
    "Import Archive": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Import Archive"
...
            "state": "translated",
            "value": "發現對等端"
          }
        }
      }
    },
    "PeerDrop": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "PeerDrop"
...
            "state": "translated",
            "value": "已傳送"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "語音通話"
          }
        }
      }
    },
    "Voice Calls": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Voice Calls"
...
            "state": "translated",
            "value": "你"
          }
        }
      }
    },
    "You are offline": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "You are offline"
...
